# chimera-deploy

./: .dockerignore  .gitignore  .gitmodules  README.md  deploy.sh  flash.sh  local_setup.sh  rtsp_config.py  setup.sh
docker/: .bash_aliases  .bashrc  chimera.repos  compose.yaml
docker/chimera-deploy/local/: local_record_all.sh  local_start_camera_server.sh  multi_rtsp_server.py  start_camera_server.sh  view_rtsp_streams.sh
docker/chimera-deploy/remote/: multi_rtsp_server.py  record_rtsp_streams.sh  remote_record_all.sh  rtsp_config.py
docker/ros-dev/: Dockerfile  entrypoint.sh
docker/rosdep_src/5g_drone/: package.xml
docker/rosdep_src/MAVInsight/: package.xml
docker/rosdep_src/cdcl_umd_msgs/: package.xml
docker/rosdep_src/manual_detector_gui/: package.xml
docker/rosdep_src/roboscout_uas_extras/: package.xml
docker/scripts/: refresh_rosdep_src.sh
local/: .bash_aliases  QGroundControl.ini  Useful Commands Tidy  chrony.conf  convert-ts-to-mp4-batch.sh  echomav_echopilot-ai_default-rangefinder-mod.px4  echomav_echopilot-ai_default_crsf_rc_mod.px4  lcam.service  local_record_all.sh  local_start_camera_server.sh  main.conf  qgroundcontrol.desktop  view_rtsp_streams.sh  yolo-mcap.py  yolo-video.py
remote/: .bash_aliases  all-working-install-packages.txt  board.py  cuda-install-packages.txt  deploy.sh  forked_rtsp_server.py  main.conf.template  onboard-without-torch-yolo-ros-working-install-packages.txt  rcam.service  record_nv_streams.sh  remote_record_all.sh  remote_start_camera_server.sh  ros2-humble-install-packages.txt  rtsp_config.py  v8.py  yolo.py
