<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>5g_drone</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>GPL-3.0-only</license>

  <build_depend>rclpy</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <depend>cdcl_umd_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>network_bridge</exec_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pymap3d</exec_depend>
  
  <!-- pip/Dockerfile dependencies unless custom rosdep keys are added -->
  <!-- pymap3d, folium, ultralytics, torch, torchvision -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
