<package format="2">
  <name>manual_detector_gui</name>
  <version>1.2.0</version>
  <description>manual_detector_gui provides a GUI plugin that extends rqt_image_view for manual target detection.</description>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_image_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt_image_view</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_image_view/issues</url>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>qt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>cdcl_umd_msgs</build_depend>


  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>
  <exec_depend>qt_gui_cpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>cdcl_umd_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
